ingresses/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: grafana
  name: prometheus-stack-grafana
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.pvcy.customer.com # update
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.pvcy.customer.com # update
    secretName: grafana-cert
