ingresses/kots-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: kots-ingress
  namespace: pvcy
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kotsadm.pvcy.customer.com
    secretName: kotsadm-app-secret
  rules:
  - host: kotsadm.pvcy.customer.com
    http:
      paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: kotsadm
              port:
                number: 3000
