ingresses/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/tls-acme: "true"
  labels:
    app: kube-prometheus-stack-prometheus
  name: prometheus-stack-kube-prom-prometheus
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.pvcy.customer.com # update
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prometheus.pvcy.customer.com # update
    secretName: prometheus-cert
